--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -83,7 +83,7 @@
                                 lugar
                                 mágico
                                 donde el amor felino es una constante. ¡Bienvenido a Miau Café, donde nuestros gatos son
-                                parte
+                                parte.
                         </div>
                         <div class="col-12 col-lg-6">
                             <img src="../assets/img/logo_cat_cafe.png" alt="" class="img-fluid">
