--- a/pages/michis.html
+++ b/pages/michis.html
@@ -1,214 +1,131 @@
-<<<<<<< HEAD <!DOCTYPE html>
-    <html lang="es">
+<!DOCTYPE html>
+<html lang="es">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nuestros Michis | Miau Café</title>
-        <link rel="icon" href="../favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="../css/bootstrap.min.css">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Nuestros Michis | Miau Café</title>
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
+</head>
 
-    <body class="container-fluid p-3">
-        <header>
-            <a href="../index.html" class="d-flex align-items-center justify-content-center">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
-                <div class="text-center mx-4 pt-3">
-                    <h1 class="mb-0">Miau café</h1>
-                    <p>Un café para ronronear</p>
-                </div>
-            </a>
-        </header>
-        <!--intente poner el navbar sticky cuando bajara pero no funcionaba dentro del header y fuera de el funciona correctamente-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
-            <div class="container">
-                <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarTogglerDemo02">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./galeria.html">Galería</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link active" aria-current="page" href="#" id="activo">Nuestros michis</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./acerca.html">Acerca</a>
-                        </li>
-                        <li class="nav-item text-center">
-                            <a class="nav-link" href="./contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+<body class="container-fluid p-3">
+    <header>
+        <a href="../index.html" class="d-flex align-items-center justify-content-center">
+            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+            <div class="text-center mx-4 pt-3">
+                <h1 class="mb-0">Miau café</h1>
+                <p>Un café para ronronear</p>
             </div>
-        </nav>
-        <main class="mt-2">
-            <div class="container my-5 text-center">
-                <h1>Conoce a nuestros michis!</h1>
-                <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
-                    nuestra historia, nuestros amados mininos. En "Nuestros Michis", te invitamos a conocer a cada uno
-                    de nuestros gatos, descubriendo sus personalidades únicas, historias de vida y por qué se han
-                    convertido en parte esencial de la magia de Miau Café. Desde los gatos juguetones hasta los más
-                    relajados, te ofrecemos un vistazo exclusivo a las estrellas peludas que alegran nuestro espacio y
-                    que te esperan con cariño. Acompáñanos en este paseo por el mundo felino de Miau Café, donde cada
-                    gato tiene su propia historia que contar.</p>
-            </div>
-            <section class="container my-5 ">
-                <div class="row d-flex justify-content-around">
-                    <div class="card mt-3" style="width: 25rem;">
-                        <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
-                            alt="Hécate una gata tricolor">
-                        <div class="card-body">
-                            <h2 class="text-center">Hécate</h2>
-                            Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
-                            actitud
-                            juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que
-                            buscan
-                            una
-                            interacción llena de alegría y vitalidad.</p>
-                        </div>
-                    </div>
-                    <div class="card mt-3" style="width: 25rem;">
-                        <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
-                            alt="Amy una gata de pelo largo">
-                        <div class="card-body">
-                            <h2 class="text-center">Amy</h2>
-                            Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y
-                            encantador.
-                            Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy
-                            es la
-                            compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un
-                            maullido
-                            que te hará sonreír.</p>
-                        </div>
-                    </div>
-                    <div class="card mt-3" style="width: 25rem;">
-                        <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
-                        <div class="card-body">
-                            <h2 class="text-center">Rory</h2>
-                            Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza,
-                            se
-                            convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte
-                            con su
-                            cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con
-                            nuestros
-                            gatos.</p>
-                        </div>
-                    </div>
-                    <div class="card mt-3" style="width: 25rem;">
-                        <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
-                        <div class="card-body">
-                            <h2 class="text-center">Prompto</h2>
-                            Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
-                            personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
-                            torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </main>
-        <footer class="container-fluid">
-            <div class="row">
-                <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
-                    <div class="pt-4 col-12 col-lg-7">
-                        <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
-                        <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
-                        <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
-                    </div>
-                    <div class="iconos col-12 col-lg-3 text-center">
-                        <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                        <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                        <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    </div>
-                </div>
-            </div>
-        </footer>
-        <script src="../js/bootstrap.bundle.min.js"></script>
-    </body>
-
-    =======
-    <!DOCTYPE html>
-    <html lang="es">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Nuestros Michis | Miau Café</title>
-        <link rel="icon" href="../favicon.ico" type="image/x-icon">
-        <link rel="stylesheet" href="../css/estilos.css">
-        <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
-    </head>
-
-    <body>
-        <header>
-            <a href="../index.html">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
-            </a>
-            <nav class="nav">
-                <ul>
-                    <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="galeria.html">Galería</a></li>
-                    <li><a href="michis.html" class="seleccion">Nuestros michis</a></li>
-                    <li><a href="acerca.html">Acerca</a></li>
-                    <li><a href="contacto.html">Contacto</a></li>
+        </a>
+    </header>
+    <!--intente poner el navbar sticky cuando bajara pero no funcionaba dentro del header y fuera de el funciona correctamente-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-brown sticky-top">
+        <div class="container">
+            <button class="navbar-toggler my-2" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarTogglerDemo02">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav me-auto mb-2 mt-2 mt-lg-0 mb-lg-0 mx-auto ">
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./galeria.html">Galería</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link active" aria-current="page" href="#" id="activo">Nuestros michis</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./acerca.html">Acerca</a>
+                    </li>
+                    <li class="nav-item text-center">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
                 </ul>
-        </header>
-        <main>
-            <section>
-                <h2>
-                    lorem
-                </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda error blanditiis qui, voluptatum
-                    exercitationem est optio repudiandae asperiores quas consectetur, sequi perspiciatis reprehenderit
-                    in
-                    deserunt quo atque eaque odit quisquam.</p>
-                <img src="../assets/img/gato1.jpg" alt="">
-            </section>
-            <section>
-                <h2>
-                    lorem
-                </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda error blanditiis qui, voluptatum
-                    exercitationem est optio repudiandae asperiores quas consectetur, sequi perspiciatis reprehenderit
-                    in
-                    deserunt quo atque eaque odit quisquam.</p>
-                <img src="../assets/img/gato2.jpg" alt="">
-            </section>
-            <section>
-                <h2>
-                    lorem
-                </h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda error blanditiis qui, voluptatum
-                    exercitationem est optio repudiandae asperiores quas consectetur, sequi perspiciatis reprehenderit
-                    in
-                    deserunt quo atque eaque odit quisquam.</p>
-                <img src="../assets/img/gato3.jpg" alt="">
-            </section>
-        </main>
-        <footer>
-            <div>
-                <img src="../assets/img/logo_cat_cafe.png" alt=" Logo" class="logofoot">
-                <p>Dirección: Algún lugar de Viña del Mar, Local 3</p>
-                <p>Teléfono: +56 9 8765 4321</p>
             </div>
-            <div class="iconos">
-                <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-                <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+        </div>
+    </nav>
+    <main class="mt-2">
+        <div class="container my-5 text-center">
+            <h1>Conoce a nuestros michis!</h1>
+            <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
+                nuestra historia, nuestros amados mininos. En "Nuestros Michis", te invitamos a conocer a cada uno
+                de nuestros gatos, descubriendo sus personalidades únicas, historias de vida y por qué se han
+                convertido en parte esencial de la magia de Miau Café. Desde los gatos juguetones hasta los más
+                relajados, te ofrecemos un vistazo exclusivo a las estrellas peludas que alegran nuestro espacio y
+                que te esperan con cariño. Acompáñanos en este paseo por el mundo felino de Miau Café, donde cada
+                gato tiene su propia historia que contar.</p>
+        </div>
+        <section class="container my-5 ">
+            <div class="row d-flex justify-content-around">
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/hecate.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Hécate una gata tricolor">
+                    <div class="card-body">
+                        <h2 class="text-center">Hécate</h2>
+                        Hecate es una gata tricolor muy cariñosa y juguetona que roba corazones en Miau Café. Con su
+                        actitud
+                        juguetona y su amor por la diversión, Hecate es la compañía perfecta para aquellos que buscan
+                        una
+                        interacción llena de alegría y vitalidad.</p>
+                    </div>
+                </div>
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/amy.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Amy una gata de pelo largo">
+                    <div class="card-body">
+                        <h2 class="text-center">Amy</h2>
+                        Amy es una gata de pelo largo blanco con naranja que destaca por su maullido fino y encantador.
+                        Su elegancia y su personalidad cariñosa hacen que sea un miembro querido en Miau Café. Amy es la
+                        compañía perfecta para aquellos que buscan la dulzura de una gata de pelo largo y un maullido
+                        que te hará sonreír.</p>
+                    </div>
+                </div>
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
+                    <div class="card-body">
+                        <h2 class="text-center">Rory</h2>
+                        Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
+                        convierte en un verdadero amor. Con su actitud reservada y su capacidad para sorprenderte con su
+                        cariño, Rory es el compañero perfecto para aquellos que buscan una conexión única con nuestros
+                        gatos.</p>
+                    </div>
+                </div>
+                <div class="card mt-3" style="width: 25rem;">
+                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
+                    <div class="card-body">
+                        <h2 class="text-center">Prompto</h2>
+                        Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
+                        personalidad muy gato naranja. Con su actitud juguetona y traviesa, Prompto es un auténtico
+                        torbellino de diversión y vitalidad que hará que tu visita a Miau Café sea inolvidable.</p>
+                    </div>
+                </div>
             </div>
-        </footer>
-    </body>
+        </section>
+    </main>
+    <footer class="container-fluid">
+        <div class="row">
+            <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <div class="pt-4 col-12 col-lg-7">
+                    <p>Dirección <i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
+                    <p>Teléfono <i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
+                    <p>Horario <i class="fa-solid fa-clock"></i> : Lunes a domingo - 9:00 hrs a 20:00 hrs</p>
+                </div>
+                <div class="iconos col-12 col-lg-3 text-center">
+                    <a href="https://www.whatsapp.com" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+</body>
 
-    >>>>>>> 3c1e4fa5e7945ac1021d5041d4bb47a0cbfaf790
-
-    </html>
+</html>
