--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="container my-5">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 mb-4">
+                <div class="col-12 col-lg-6  mb-4">
                     <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
                     <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau
                         Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina
@@ -66,14 +66,14 @@
                         vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en cada
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
-                <div class="col-lg-6 col-sm-12 mb-4">
+                <div class="col-12 col-lg-6 mb-4">
                     <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
                 </div>
             </div>
         </div>
         <div class="container my-5">
             <div class="row">
-                <div class="col-lg-6 col-sm-12 mb-4 order-lg-last">
+                <div class="col-12 col-lg-6 mb-4 order-lg-last">
                     <h1>¡Nuestros michis te esperan!</h1>
                     <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
                         Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad
@@ -84,7 +84,7 @@
                         por qué cada uno de ellos es tan especial! Ven y conoce a los protagonistas de Miau Café y
                         déjate cautivar por su magia peluda.</p>
                 </div>
-                <div class="col-lg-6 col-sm-12 mb-4 order-lg-first">
+                <div class="col-12 col-lg-6 mb-4 order-lg-first">
                     <img src="./assets/img/gato1.jpg" alt="Gato y cafe" class="img-fluid rounded-pill">
                 </div>
             </div>
