optimizacion de imagenes + uso de Maps

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </nav>
-    <main>
+    <main class="mt-2">
         <div class="card d-none d-lg-block">
             <img src="./assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
         </div>
