--- a/pages/michis.html
+++ b/pages/michis.html
@@ -51,6 +51,9 @@
         </div>
     </nav>
     <main class="mt-2">
+        <!--  <div class="card d-none d-lg-block">
+            <img src="../assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
+        </div>-->
         <div class="container my-5 text-center">
             <h1>Conoce a nuestros michis!</h1>
             <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
