añadiendo alt a imagenes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                         déjate cautivar por su magia peluda.</p>
                 </div>
                 <div class="col-12 col-lg-6 mb-4 order-lg-first">
-                    <img src="./assets/img/gato1.jpg" alt="Gato y cafe" class="img-fluid rounded-pill">
+                    <img src="./assets/img/gato1.jpg" alt="Gato durmiendo al lado de un cafe"
+                        class="img-fluid rounded-pill">
                 </div>
             </div>
         </div>
@@ -93,7 +94,8 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="./assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <img src="./assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                    class="logo logofoot col-12 col-lg-1 mx-auto">
                 <div class="pt-4 col-12 col-lg-7">
                     <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
