--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
 <body class="container-fluid p-3">
     <header>
         <a href="../index.html" class="d-flex align-items-center justify-content-center">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+            <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
                 <h1 class="mb-0">Miau café</h1>
                 <p>Un café para ronronear</p>
@@ -119,7 +119,8 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                    class="logo logofoot col-12 col-lg-1 mx-auto">
                 <div class="pt-4 col-12 col-lg-7">
                     <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
