--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -15,7 +15,7 @@
 <body class="container-fluid p-3">
     <header>
         <a href="../index.html" class="d-flex align-items-center justify-content-center">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+            <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
                 <h1 class="mb-0">Miau café</h1>
                 <p>Un café para ronronear</p>
@@ -66,18 +66,19 @@
                 ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
-            <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta2.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta3.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta4.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta5.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
-            <img src="../assets/img/carta6.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="">
+            <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Capuccino ">
+            <img src="../assets/img/carta2.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Té canela y limon">
+            <img src="../assets/img/carta3.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Hotcakes de Nutella fresa">
+            <img src="../assets/img/carta4.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Sandwich de huevo tocino">
+            <img src="../assets/img/carta5.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Sandwich de palta y huevo">
+            <img src="../assets/img/carta6.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Pastel de Zanahoria">
         </div>
     </main>
     <footer class="container-fluid">
         <div class="row">
             <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                    class="logo logofoot col-12 col-lg-1 mx-auto">
                 <div class="pt-4 col-12 col-lg-7">
                     <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321 </p>
