--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -17,7 +17,7 @@
     <body class="container-fluid p-3">
         <header>
             <a href="../index.html" class="d-flex align-items-center justify-content-center">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Cafe" class="logo">
                 <div class="text-center mx-4 pt-3">
                     <h1 class="mb-0">Miau café</h1>
                     <p>Un café para ronronear</p>
@@ -86,7 +86,7 @@
                                 parte.
                         </div>
                         <div class="col-12 col-lg-6">
-                            <img src="../assets/img/logo_cat_cafe.png" alt="" class="img-fluid">
+                            <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                         </div>
                     </div>
                     <div>
@@ -102,7 +102,8 @@
         <footer class="container-fluid">
             <div class="row">
                 <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                    <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                        class="logo logofoot col-12 col-lg-1 mx-auto">
                     <div class="pt-4 col-12 col-lg-7">
                         <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                         <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
