--- a/pages/michis.html
+++ b/pages/michis.html
@@ -15,7 +15,7 @@
 <body class="container-fluid p-3">
     <header>
         <a href="../index.html" class="d-flex align-items-center justify-content-center">
-            <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo">
+            <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
                 <h1 class="mb-0">Miau café</h1>
                 <p>Un café para ronronear</p>
@@ -90,7 +90,8 @@
                     </div>
                 </div>
                 <div class="card mt-3" style="width: 25rem;">
-                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
+                    <img src="../assets/img/Rory.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Rory un gato de pelo gris">
                     <div class="card-body">
                         <h2 class="text-center">Rory</h2>
                         Rory es un gato gris que, en un principio, puede parecer arisco, pero cuando toma confianza, se
@@ -100,7 +101,8 @@
                     </div>
                 </div>
                 <div class="card mt-3" style="width: 25rem;">
-                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 " alt="...">
+                    <img src="../assets/img/prompto.jpg" class="card-img-top pt-3 rounded-5 "
+                        alt="Prompto el gato hermano de Amy pero con pelo corto">
                     <div class="card-body">
                         <h2 class="text-center">Prompto</h2>
                         Prompto es el hermano de Amy y comparte sus mismos colores, pero con el pelo corto y una
@@ -114,7 +116,8 @@
     <footer class="container-fluid">
         <div class="row">
             <div class="d-flex justify-content-between px-3 flex-wrap mx-auto ">
-                <img src="../assets/img/logo_cat_cafe.png" alt="Logo" class="logo logofoot col-12 col-lg-1 mx-auto">
+                <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café"
+                    class="logo logofoot col-12 col-lg-1 mx-auto">
                 <div class="pt-4 col-12 col-lg-7">
                     <p><i class="fa-solid fa-store"></i> : Algún lugar de Viña del Mar, Local 3</p>
                     <p><i class="fa-solid fa-phone"></i> : +56 9 8765 4321</p>
