se agrega meta description y meta keywords

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio | Miau Café</title>
+    <meta name="description"
+        content="Disfruta de un café o té mientras compartes momentos con nuestros adorables gatos. ¡Te esperamos en Miau Café!">
+    <meta name="keywords"
+        content="Miau Café, Cat Café, café para gatos, gatos, felinos, relajación, diversión, café y gatos">
+
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/estilos.css">
