--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto | Miau Café</title>
+    <meta name="description"
+        content="Ponte en contacto con Miau Café para consultas, reservaciones y más. Encuentra nuestra ubicación.">
+    <meta name="keywords" content="Miau Café, contacto, ubicación, reservaciones">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
