--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Galeria | Miau Café</title>
+    <meta name="description"
+        content="Explora la galería de productos en Miau Café y descubre nuestra variedad en nuestro menú.">
+    <meta name="keywords"
+        content="Miau Café, galería de productos, productos para amantes de gatos, café para gatos, productos únicos">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
