--- a/pages/michis.html
+++ b/pages/michis.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuestros Michis | Miau Café</title>
+    <meta name="description"
+        content="Conoce a nuestros encantadores gatos en Miau Café, descubre sus historias únicas y personalidades encantadoras.">
+    <meta name="keywords"
+        content="Miau Café, nuestros gatos, gatos, felinos, perfiles de gatos, historias de gatos, personalidades de gatos">
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/estilos.css">
