ultimos detalles para preentrega 3

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -55,8 +55,8 @@
     </nav>
     <main class="mt-2">
         <section>
-            <div class="container my-5 text-center">
-                <h1>¡Déjanos tus comentarios!</h1>
+            <div class="container my-5">
+                <h1 class="text-center">¡Déjanos tus comentarios!</h1>
                 <p>¿Tienes preguntas, comentarios o simplemente quieres saludar a nuestros adorables gatos? Estamos
                     encantados de escucharte. En Miau Café, valoramos tu retroalimentación y estamos aquí para ayudarte
                     en
@@ -94,8 +94,8 @@
                                     placeholder="Ingrese su comentario"></textarea>
                             </div>
                             <div class="text-center">
-                                <button type="submit" class="btn btn-color ">Enviar Formulario</button>
                                 <button type="reset" class="btn btn-alt">Limpiar Formulario</button>
+                                <button type="submit" class="btn btn-color ">Enviar Formulario</button>
                             </div>
                         </form>
                     </div>
@@ -103,8 +103,8 @@
             </div>
         </section>
         <section>
-            <div class="container my-5 text-center">
-                <h2>¡Ven a visitarnos!</h2>
+            <div class="container my-5">
+                <h2 class="text-center">¡Ven a visitarnos!</h2>
                 <p>¡Te invitamos a visitarnos en nuestro acogedor rincón de gatos en Viña del Mar! Estamos ubicados en
                     una
                     de las zonas más encantadoras de la ciudad, donde podrás disfrutar de la brisa marina y, por
