--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -57,17 +57,14 @@
     <main class="mt-2">
         <div class="container my-5">
             <h1 class="text-center">Galería</h1>
-            <p class="text-center">En Miau Café, creemos en cautivar todos tus sentidos, y la vista es uno de los
-                más
-                importantes. Te invitamos
-                a explorar nuestra vibrante galería de imágenes que capturan la esencia de la felicidad gatuna y la
-                exquisitez de nuestras bebidas y alimentos. Desde gatos que derrochan amor hasta tazas de café humeante
-                y
-                bocados tentadores, nuestra galería te sumergirá en un mundo de emociones y sabores. Desplázate a través
-                de
-                nuestras fotos y deja que la belleza y la alegría de Miau Café te inspiren a planificar tu próxima
-                visita.
-                ¡Prepárate para un recorrido visual que te hará ronronear de placer!</p>
+            <p>En Miau Café, creemos en cautivar todos tus sentidos, y la vista es uno de los más importantes. Te
+                invitamos a explorar nuestra vibrante galería de imágenes que capturan la esencia de la felicidad gatuna
+                y la exquisitez de nuestras bebidas y alimentos.</p>
+
+            <p>Desde gatos que derrochan amor hasta tazas de café humeante y bocados tentadores, nuestra galería te
+                sumergirá en un mundo de emociones y sabores. Desplázate a través de nuestras fotos y deja que la
+                belleza y la alegría de Miau Café te inspiren a planificar tu próxima visita. ¡Prepárate para un
+                recorrido visual que te hará ronronear de placer!</p>
         </div>
         <div class="d-flex flex-wrap justify-content-center">
             <img src="../assets/img/carta1.jpg" class="col-12 col-lg-3 rounded-3 m-3" alt="Capuccino ">
