--- a/pages/michis.html
+++ b/pages/michis.html
@@ -58,15 +58,17 @@
         <!--  <div class="card d-none d-lg-block">
             <img src="../assets/img/banner.jpeg" class="card-img " alt="Banner Miau Cafe">
         </div>-->
-        <div class="container my-5 text-center">
-            <h1>Conoce a nuestros michis!</h1>
+        <div class="container my-5">
+            <h1 class="text-center mb-3">Conoce a nuestros michis!</h1>
             <p>Bienvenidos a la sección más encantadora de Miau Café, donde te presentamos a los protagonistas de
-                nuestra historia, nuestros amados mininos. En "Nuestros Michis", te invitamos a conocer a cada uno
-                de nuestros gatos, descubriendo sus personalidades únicas, historias de vida y por qué se han
-                convertido en parte esencial de la magia de Miau Café. Desde los gatos juguetones hasta los más
-                relajados, te ofrecemos un vistazo exclusivo a las estrellas peludas que alegran nuestro espacio y
-                que te esperan con cariño. Acompáñanos en este paseo por el mundo felino de Miau Café, donde cada
-                gato tiene su propia historia que contar.</p>
+                nuestra historia, nuestros amados mininos.</p>
+
+            <p>En "Nuestros Michis", te invitamos a conocer a cada uno de nuestros gatos, descubriendo sus
+                personalidades únicas, historias de vida y por qué se han convertido en parte esencial de la magia de
+                Miau Café. Desde los gatos juguetones hasta los más relajados, te ofrecemos un vistazo exclusivo a las
+                estrellas peludas que alegran nuestro espacio y que te esperan con cariño. Acompáñanos en este paseo por
+                el mundo felino de Miau Café, donde cada gato tiene su propia historia que contar.</p>
+
         </div>
         <section class="container my-5 ">
             <div class="row d-flex justify-content-around">
