--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio | Miau Café</title>
-    <meta name="description"
-        content="Disfruta de un café o té mientras compartes momentos con nuestros adorables gatos. ¡Te esperamos en Miau Café!">
+    <title>Miau Café - Tu lugar para disfrutar de café y gatos</title>
+    <meta name="description" <meta name="description"
+        content="Vive la experiencia única de disfrutar de café o té en compañía de encantadores gatos en Miau Café. Conoce a nuestros adorables mininos, explora sus perfiles y escapa del estrés diario en nuestro acogedor espacio. ¡Te esperamos!">
     <meta name="keywords"
         content="Miau Café, Cat Café, café para gatos, gatos, felinos, relajación, diversión, café y gatos">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
@@ -60,35 +60,40 @@
         </div>
         <div class="container my-5">
             <div class="row">
-                <div class="col-12 col-lg-6  mb-4">
+                <div class="col-12 col-lg-6 my-5">
                     <h1>¡Ven a vivir la experiencia Cat Café en Miau Café!</h1>
                     <p>¡Bienvenidos al lugar donde los amantes de los felinos encuentran su paraíso! En nuestro Miau
-                        Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión. Imagina
+                        Café, te invitamos a sumergirte en un mundo de suavidad, ronroneos y pura diversión.</p>
+                    <p> Imagina
                         relajarte con una taza de tu café o té favorito mientras disfrutas de la compañía de nuestros
                         encantadores gatos, todos ansiosos por compartir su cariño contigo. Nuestro ambiente acogedor y
-                        relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva. Ven a
-                        vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en cada
+                        relajado te permite escapar del estrés diario y disfrutar de la terapia felina definitiva.</p>
+
+                    <p>Ven a vivir una experiencia única en Miau Café, donde la ternura y la diversión se encuentran en
+                        cada
                         rincón. ¿Estás listo para consentir a tu alma gatuna?</p>
                 </div>
-                <div class="col-12 col-lg-6 mb-4">
+                <div class="col-12 col-lg-6 my-5">
                     <img src="./assets/img/gatos_ventana.jpg" alt="Gatos en una ventana" class="img-fluid rounded-pill">
                 </div>
             </div>
         </div>
         <div class="container my-5">
             <div class="row">
-                <div class="col-12 col-lg-6 mb-4 order-lg-last">
-                    <h1>¡Nuestros michis te esperan!</h1>
+                <div class="col-12 col-lg-6 my-5 order-lg-last">
+                    <h2>¡Nuestros michis te esperan!</h2>
                     <p>Nuestros adorables mininos de Miau Café están ansiosos por conocerte. En "Nuestros Michis te
                         Esperan", te presentamos a nuestra traviesa pandilla de gatos, cada uno con su personalidad
-                        única y encanto felino. Desde los juguetones gatitos que siempre están listos para una partida
-                        de caza hasta los gatos más relajados que disfrutan de una siesta tranquila en algún rincón
-                        acogedor, hay un mundo entero de diversión y amor por descubrir. ¿Quieres aprender más sobre
-                        nuestras mascotas de cuatro patas y sus historias en Miau Café? ¡Explora sus perfiles y descubre
-                        por qué cada uno de ellos es tan especial! Ven y conoce a los protagonistas de Miau Café y
-                        déjate cautivar por su magia peluda.</p>
+                        única y encanto felino.</p>
+                    <p>Desde los juguetones gatitos que siempre están listos para una partida de caza hasta los gatos
+                        más relajados que disfrutan de una siesta tranquila en algún rincón acogedor, hay un mundo
+                        entero de diversión y amor por descubrir.</p>
+                    <p>¿Quieres aprender más sobre nuestras mascotas de cuatro patas y sus historias en Miau Café?
+                        ¡Explora sus perfiles y descubre por qué cada uno de ellos es tan especial! Ven y conoce a
+                        los protagonistas de Miau Café y déjate cautivar por su magia peluda.</p>
+
                 </div>
-                <div class="col-12 col-lg-6 mb-4 order-lg-first">
+                <div class="col-12 col-lg-6 mb-3 order-lg-first">
                     <img src="./assets/img/gato1.jpg" alt="Gato durmiendo al lado de un cafe"
                         class="img-fluid rounded-pill">
                 </div>
