--- a/pages/acerca.html
+++ b/pages/acerca.html
@@ -7,15 +7,19 @@
     <title>Acerca | Miau Café</title>
     <meta name="description" content="Descubre más sobre Miau Café, el lugar donde los amantes de los gatos se reúnen.">
     <meta name="keywords" content="Miau Café, cat café, historia, amantes de los gatos, café para gatos">
-</head>
-<link rel="icon" href="../favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="../css/bootstrap.min.css">
-<link rel="stylesheet" href="../css/estilos.css">
-<script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
+    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Gabarito&display=swap">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css">
+    <script src="https://kit.fontawesome.com/f836eb7316.js" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 
 <body class="container-fluid p-3">
+    <script>
+        AOS.init();
+    </script>
 
     <body class="container-fluid p-3">
         <header>
@@ -59,7 +63,7 @@
             <section>
                 <div class="container my-2">
                     <div class="row">
-                        <div class="col-12 col-lg-6 ">
+                        <div data-aos="fade-center" data-aos-duration="1000" class="col-12 col-lg-6 ">
                             <h1 class="text-center mt-5 mb-3">Acerca</h1>
                             <p>La historia de Miau Café comenzó con la visión de crear un espacio donde los amantes de
                                 los gatos pudieran disfrutar de la compañía de estos encantadores felinos mientras
@@ -76,7 +80,7 @@
                                 ¡Bienvenido a Miau Café, donde nuestros gatos son parte.</p>
 
                         </div>
-                        <div class="col-12 col-lg-6">
+                        <div data-aos="zoom-in" class="col-12 col-lg-6">
                             <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="img-fluid">
                         </div>
                     </div>
