--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
         <a href="../index.html" class="d-flex align-items-center justify-content-center">
             <img src="../assets/img/logo_cat_cafe.png" alt="Logo Miau Café" class="logo">
             <div class="text-center mx-4 pt-3">
-                <h1 class="mb-0">Miau café</h1>
+                <h2 class="mb-0" id="textoLogo">Miau café</h2>
                 <p>Un café para ronronear</p>
             </div>
         </a>
